@@ -133,7 +133,7 @@
   </target>
 
   <target name="prep-lucene-jars" 
-  	      depends="jar-lucene-core, jar-analyzers-phonetic, jar-analyzers-kuromoji, jar-suggest, jar-highlighter, jar-memory,
+  	      depends="jar-lucene-core, jar-analyzers-phonetic, jar-analyzers-kuromoji, jar-analyzers-morfologik, jar-suggest, jar-highlighter, jar-memory,
   	               jar-misc, jar-spatial, jar-grouping, jar-queries, jar-queryparser">
   	  <property name="solr.deps.compiled" value="true"/>
   </target>
@@ -157,6 +157,7 @@
       <fileset file="${memory.jar}" />
       <fileset file="${misc.jar}" />
       <fileset file="${spatial.jar}" />
+      <fileset refid="analyzers-morfologik.fileset" />
     </copy>
     </sequential>
   </target>
